Finish Swagger API
